--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vanilla</title>
   </head>
   <body>
-    <a href="./1/index.html" target="_blank" rel="noopener noreferrer"></a>
+    <a href="1/index.html" target="_blank" rel="noopener noreferrer"></a>
     
   </body>
 </html>
